// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comment demo > renders actions correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-large ant-space-gap-col-large css-var-root"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-comment css-var-root ant-comment-css-var"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
          >
            <img
              alt="Zhang San"
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=ZhangSan"
            />
          </span>
        </div>
        <div
          class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header"
          >
            <div
              class="ant-comment-author"
            >
              Zhang San
            </div>
            <div
              class="ant-comment-datetime"
            >
              5 minutes ago
            </div>
          </div>
          <div
            class="ant-comment-body"
          >
            We supply a series of design principles, practical patterns and high quality design resources, to help people and teams build their products efficiently.
          </div>
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ant-comment-actions css-var-root"
            style="flex-wrap: wrap;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="like"
                    class="anticon anticon-like"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="like"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 00-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 00471 99.9c-52 0-98 35-111.8 85.1l-85.9 311H144c-17.7 0-32 14.3-32 32v364c0 17.7 14.3 32 32 32h601.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM184 852V568h81v284h-81zm636.4-353l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 22.4-13.2 42.6-33.6 51.8H329V564.8l99.5-360.5a44.1 44.1 0 0142.2-32.3c7.6 0 15.1 2.2 21.1 6.7 9.9 7.4 15.2 18.6 14.6 30.5l-9.6 198.4h314.4C829 418.5 840 436.9 840 456c0 16.5-7.2 32.1-19.6 43z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                   12
                </span>
                <!---->
              </button>
            </div>
            <!---->
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="message"
                    class="anticon anticon-message"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="message"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M464 512a48 48 0 1096 0 48 48 0 10-96 0zm200 0a48 48 0 1096 0 48 48 0 10-96 0zm-400 0a48 48 0 1096 0 48 48 0 10-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 00-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 00-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 00112 714v152a46 46 0 0046 46h152.1A449.4 449.4 0 00510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 00142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                   回复 
                </span>
                <!---->
              </button>
            </div>
            <!---->
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                   编辑 
                </span>
                <!---->
              </button>
            </div>
            <!---->
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-var-root ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="delete"
                    class="anticon anticon-delete"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                   删除 
                </span>
                <!---->
              </button>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-comment css-var-root ant-comment-css-var"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
          >
            <img
              alt="Li Si"
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=LiSi"
            />
          </span>
        </div>
        <div
          class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header"
          >
            <div
              class="ant-comment-author"
            >
              Li Si
            </div>
            <div
              class="ant-comment-datetime"
            >
              3 minutes ago
            </div>
          </div>
          <div
            class="ant-comment-body"
          >
            Actions are not limited to buttons — links and plain text work just as well, and each item stays fully under your control.
          </div>
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ant-comment-actions css-var-root"
            style="flex-wrap: wrap;"
          >
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-var-root ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="delete"
                    class="anticon anticon-delete"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                   删除 
                </span>
                <!---->
              </button>
            </div>
            <!---->
            <div
              class="ant-space-item"
            >
              <a>
                置顶
              </a>
            </div>
            <!---->
            <div
              class="ant-space-item"
            >
              <span>
                打赏
              </span>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`comment demo > renders basic correctly 1`] = `
<div
  class="ant-comment css-var-root ant-comment-css-var"
>
  <div
    class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
      >
        <img
          alt="Zhang San"
          src="https://api.dicebear.com/7.x/miniavs/svg?seed=ZhangSan"
        />
      </span>
    </div>
    <div
      class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header"
      >
        <div
          class="ant-comment-author"
        >
          Zhang San
        </div>
        <div
          class="ant-comment-datetime"
        >
          5 minutes ago
        </div>
      </div>
      <div
        class="ant-comment-body"
      >
        We supply a series of design principles, practical patterns and high quality design resources, to help people and teams build their products efficiently.
      </div>
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`comment demo > renders datetime correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-large ant-space-gap-col-large css-var-root"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-comment css-var-root ant-comment-css-var"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
          >
            <img
              alt="Zhang San"
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=ZhangSan"
            />
          </span>
        </div>
        <div
          class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header"
          >
            <div
              class="ant-comment-author"
            >
              Zhang San
            </div>
            <div
              class="ant-comment-datetime"
            >
              5 minutes ago
            </div>
          </div>
          <div
            class="ant-comment-body"
          >
            We supply a series of design principles, practical patterns and high quality design resources.
          </div>
          <!---->
        </div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-comment css-var-root ant-comment-css-var"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
          >
            <img
              alt="Zhang San"
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=ZhangSan"
            />
          </span>
        </div>
        <div
          class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-comment-header"
          >
            <div
              class="ant-comment-author"
            >
              Zhang San
            </div>
            <div
              class="ant-comment-datetime"
            >
              5 minutes ago
            </div>
          </div>
          <div
            class="ant-comment-body"
          >
            The datetime sits at the end of the row when the author is short enough to leave room for it.
          </div>
          <!---->
        </div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-comment css-var-root ant-comment-css-var"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
          >
            <img
              alt="Zhang San"
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=ZhangSan"
            />
          </span>
        </div>
        <div
          class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-flex-start ant-flex-vertical ant-comment-header"
          >
            <div
              class="ant-comment-author"
            >
              Zhang San
            </div>
            <div
              class="ant-comment-datetime"
            >
              5 minutes ago
            </div>
          </div>
          <div
            class="ant-comment-body"
          >
            Switching to block placement moves the datetime onto its own line, which reads better on narrow screens.
          </div>
          <!---->
        </div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-comment css-var-root ant-comment-css-var"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
          >
            <img
              alt="Zhang San"
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=ZhangSan"
            />
          </span>
        </div>
        <div
          class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-flex-end ant-flex-vertical ant-comment-header"
          >
            <div
              class="ant-comment-author"
            >
              Zhang San
            </div>
            <div
              class="ant-comment-datetime"
            >
              5 minutes ago
            </div>
          </div>
          <div
            class="ant-comment-body"
          >
            Block placement and end alignment can be combined to push the datetime to the trailing edge.
          </div>
          <!---->
        </div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`comment demo > renders nested correctly 1`] = `
<div
  class="ant-comment css-var-root ant-comment-css-var"
>
  <div
    class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
      >
        <img
          alt="Zhang San"
          src="https://api.dicebear.com/7.x/miniavs/svg?seed=ZhangSan"
        />
      </span>
    </div>
    <div
      class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header"
      >
        <div
          class="ant-comment-author"
        >
          Zhang San
        </div>
        <div
          class="ant-comment-datetime"
        >
          5 minutes ago
        </div>
      </div>
      <div
        class="ant-comment-body"
      >
        We supply a series of design principles, practical patterns and high quality design resources.
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-children"
  >
    <div
      class="ant-comment css-var-root ant-comment-css-var"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
          >
            <img
              alt="Li Si"
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=LiSi"
            />
          </span>
        </div>
        <div
          class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header"
          >
            <div
              class="ant-comment-author"
            >
              Li Si
            </div>
            <div
              class="ant-comment-datetime"
            >
              3 minutes ago
            </div>
          </div>
          <div
            class="ant-comment-body"
          >
            Keeping the discussion attached to the comment it refers to makes a long thread much easier to follow.
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-children"
      >
        <div
          class="ant-comment css-var-root ant-comment-css-var"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
          >
            <div
              class="ant-comment-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
              >
                <img
                  alt="Wang Wu"
                  src="https://api.dicebear.com/7.x/miniavs/svg?seed=WangWu"
                />
              </span>
            </div>
            <div
              class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
            >
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header"
              >
                <div
                  class="ant-comment-author"
                >
                  Wang Wu
                </div>
                <div
                  class="ant-comment-datetime"
                >
                  1 minute ago
                </div>
              </div>
              <div
                class="ant-comment-body"
              >
                Three levels is usually enough — beyond that the indentation eats too much horizontal space.
              </div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div
      class="ant-comment css-var-root ant-comment-css-var"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
          >
            <img
              alt="Zhao Liu"
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=ZhaoLiu"
            />
          </span>
        </div>
        <div
          class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header"
          >
            <div
              class="ant-comment-author"
            >
              Zhao Liu
            </div>
            <div
              class="ant-comment-datetime"
            >
              2 minutes ago
            </div>
          </div>
          <div
            class="ant-comment-body"
          >
            Sibling replies stay at the same level, so a thread can branch without growing any deeper.
          </div>
          <!---->
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`comment demo > renders semantic correctly 1`] = `
<div
  class="ant-comment css-var-root ant-comment-css-var comment-semantic-root"
>
  <div
    class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner comment-semantic-inner"
  >
    <div
      class="ant-comment-avatar comment-semantic-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
      >
        <img
          alt="Zhang San"
          src="https://api.dicebear.com/7.x/miniavs/svg?seed=ZhangSan"
        />
      </span>
    </div>
    <div
      class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content comment-semantic-content"
      style="padding: 12px 16px; border: 2px dashed var(--ant-color-primary); border-radius: 6px; background-color: var(--ant-color-fill-quaternary);"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header comment-semantic-header"
      >
        <div
          class="ant-comment-author comment-semantic-author"
        >
          Zhang San
        </div>
        <div
          class="ant-comment-datetime comment-semantic-datetime"
        >
          5 minutes ago
        </div>
      </div>
      <div
        class="ant-comment-body comment-semantic-body"
      >
        We supply a series of design principles, practical patterns and high quality design resources.
      </div>
      <div
        class="ant-space ant-space-horizontal ant-space-align-center ant-comment-actions comment-semantic-actions css-var-root"
        style="flex-wrap: wrap;"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm"
            type="button"
          >
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare "
              enterfromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-prepare ant-btn-loading-icon-motion-enter-prepare ant-btn-loading-icon-motion-enter-start"
              entertoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-enter ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-active ant-btn-loading-icon-motion-enter-active"
              leaveactiveclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
              leavefromclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave"
              leavetoclass="ant-btn-loading-icon-motion ant-btn-loading-icon-motion-leave ant-btn-loading-icon-motion-leave-active"
              name="ant-btn-loading-icon-motion"
              persisted="false"
            >
              <!---->
            </transition-stub>
            <span>
               回复 
            </span>
            <!---->
          </button>
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-children comment-semantic-children"
    style="padding-inline-start: 24px; border-inline-start: 2px solid var(--ant-color-border);"
  >
    <div
      class="ant-comment css-var-root ant-comment-css-var"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-flex-start ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var ant-comment-avatar-inner"
          >
            <img
              alt="Li Si"
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=LiSi"
            />
          </span>
        </div>
        <div
          class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical ant-comment-content"
        >
          <div
            class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-flex-start ant-comment-header"
          >
            <div
              class="ant-comment-author"
            >
              Li Si
            </div>
            <div
              class="ant-comment-datetime"
            >
              3 minutes ago
            </div>
          </div>
          <div
            class="ant-comment-body"
          >
            Nested comments are wrapped by the children container, which is styleable on its own.
          </div>
          <!---->
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;
